--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+.idea
 # Distribution / packaging
 .Python
 env/
@@ -99,5 +99,9 @@ ENV/
 
 # mypy
 .mypy_cache/
-
-.vscode/
+/experiments/
+.idea/Tensorflow-architecture-templete.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+experiments/
