--- a/.gitignore
+++ b/.gitignore
@@ -105,5 +105,8 @@ ENV/
 .idea/modules.xml
 .idea/workspace.xml
 experiments/
+
 .vscode/launch.json
 .vscode/settings.json
+meta_learning.py
+pytorch/
